--- a/public/styles/css/style.css
+++ b/public/styles/css/style.css
@@ -47,9 +47,36 @@
     margin-top: 1.5em;
 }
 
+.buttonOverview{
+    width: 100%;
+    height: 100%;
+}
+
+.headerButtonOverview{
+    padding: 0;
+    margin-top: 1em;
+}
+
+.overviewDiv{
+    font-size: 1.1em;
+    padding : 1.5em;
+    background-color: #C8C8C8;
+    color: black;
+}
+
 .msgInfoUser{
     text-align: center;
     margin: 1em;
+}
+
+.noBorder{
+    border: none;
+}
+
+dt {
+    float: left;
+    margin-right: 0.3em;
+    white-space: pre;
 }
 
 #divMapa {
