--- a/views/user_login.html
+++ b/views/user_login.html
@@ -7,14 +7,14 @@
 <form class="form-horizontal" method="post" action="/login">
     <div class="form-group">
         <label class="control-label col-sm-2" for="email">Email:</label>
-        <div class="col-sm-10">
+        <div class="col-sm-12">
             <input type="email" class="form-control" name="email"
                    placeholder="email@email.com" required="true"/>
         </div>
     </div>
     <div class="form-group">
         <label class="control-label col-sm-2" for="password">Password:</label>
-        <div class="col-sm-10">
+        <div class="col-sm-12">
             <input type="password" class="form-control" name="password"
                    placeholder="contraseña" required="true"/>
         </div>
@@ -22,10 +22,9 @@
             <a class="contrasenaOlvidarLink" data-toggle="modal" data-target="#modeloRecuperarContrasena">¿Has olvidado tu contraseña?</a>
         </div>
     </div>
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
-        </div>
+    <div class="div-field form-row">
+            <button id="btnPicturesA" type="submit" class="col-md-12 btnSiguiente btn btn-secondary btn-lg ">Iniciar Sesión
+            </button>
     </div>
 </form>
 
