--- a/views/error_view.html
+++ b/views/error_view.html
@@ -2,9 +2,12 @@
 {% block titulo %} RSTemp {% endblock %}
 {% block contenido_principal %}
 
-<h2>Error</h2>
-<h3>Si estas viendo esta página, es porque ha ocurrido el siguiente error:</h3>
-<h4>{{mensaje}}</h4>
-<td>
-    <a href="/">Volver a la página de inicio.</a> <br>
-</td>
+
+<div class="container">
+    <h2>Error</h2>
+    <h3>Si estas viendo esta página, es porque ha ocurrido el siguiente error:</h3>
+    <h4>{{mensaje}}</h4>
+    <td>
+        <a href="/">Volver a la página de inicio.</a> <br>
+    </td>
+</div>
