--- a/public/styles/css/style.css
+++ b/public/styles/css/style.css
@@ -1,14 +1,21 @@
 .imgLogo {
     width: 100%;
     height: 100%;
+
+    display: inline-block;
+    float: left;
+}
+.contrasenaOlvidarLink{
+    cursor: pointer;
 }
 
-.contrasenaOlvidar {
+.centeredText {
     text-align: center;
 }
 
-.contrasenaOlvidarLink{
-    cursor: pointer;
+.divPropertyDetails{
+    width: 100%;
+    margin:5em
 }
 
 .btnAdd{
@@ -47,6 +54,10 @@
     margin-top: 1.5em;
 }
 
+.field-icon{
+    justify-content: center;
+}
+
 .buttonOverview{
     width: 100%;
     height: 100%;
@@ -69,8 +80,37 @@
     margin: 1em;
 }
 
+.displayDiv{
+    margin-top: 4em;
+}
+
+.listaInfo{
+    list-style: none;
+}
+
+.displayProperty:link,
+.displayProperty:visited,
+.displayProperty:hover,
+.displayProperty:active{
+    text-decoration: none;
+    color: black;
+}
+
+.displayPrice{
+    color: #217E1A;
+}
+
+.truncate{
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;;
+}
+
 .noBorder{
     border: none;
+}
+.fas{
+    margin-right: 0.2em;
 }
 
 dt {
@@ -79,5 +119,9 @@ dt {
     white-space: pre;
 }
 
-#divMapa {
+.mapLayer {
     height: 30em; }
+
+.opacidadIcono{
+    opacity: 0.2;
+}
