--- a/views/property_modify.html
+++ b/views/property_modify.html
@@ -1,54 +1,58 @@
-{% extends "base.html" %} 
+{% extends "base.html" %}
 
-{% block titulo %} Agregar propiedad {% endblock %} 
+{% block titulo %} Agregar propiedad {% endblock %}
 
 {% block contenido_principal %}
-  <h2>Modificar propiedad</h2>
-  <form class="form-horizontal" method="post" action="/property/edit/{{ property._id.toString() }}" encType="multipart/form-data">
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="name">Nombre:</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" name="name"
-            placeholder="Nombre de mi propiedad" required="true" 
-            value="{{ property.name }}" />
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="type">Type:</label>
-      <div class="col-sm-10">
-		<select class="form-control" name="type" required="true" >
-            <option value="chalet">Chalet
-            </option>
-            <option value="piso">Piso
-            </option>
-            <option value="parcela">Parcela
-            </option>
-            </option>
-            <option value="otro">Otro
-            </option>
-		  <script> document.getElementById("{{ property.type }}").selected = "true"; </script>
-		</select>
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="price">Precio (€):</label>
-      <div class="col-sm-10">          
-        <input type="number" step="0.01" class="form-control" name="price"
-        	placeholder="2.50" required="true" value="{{ property.price }}"/>
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="img">Imagen principal:</label>
-      <div class="col-sm-10">       
-        <img src="/propertiesimg/{{ property._id.toString() }}.png" alt="logo" />
-        <input type="file" class="custom-file-input" name="img"
-        	accept=".png"  />
-      </div>
-    </div>
-    <div class="form-group">        
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-primary">Modificar</button>
-      </div>
-    </div>
-  </form>
+
+<div class="container">
+    <h2>Modificar propiedad</h2>
+    <form class="form-horizontal" method="post" action="/property/edit/{{ property._id.toString() }}"
+          encType="multipart/form-data">
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="name">Nombre:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" name="name"
+                       placeholder="Nombre de mi propiedad" required="true"
+                       value="{{ property.name }}"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="type">Type:</label>
+            <div class="col-sm-10">
+                <select class="form-control" name="type" required="true">
+                    <option value="chalet">Chalet
+                    </option>
+                    <option value="piso">Piso
+                    </option>
+                    <option value="parcela">Parcela
+                    </option>
+                    </option>
+                    <option value="otro">Otro
+                    </option>
+                    <script> document.getElementById("{{ property.type }}").selected = "true"; </script>
+                </select>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="price">Precio (€):</label>
+            <div class="col-sm-10">
+                <input type="number" step="0.01" class="form-control" name="price"
+                       placeholder="2.50" required="true" value="{{ property.price }}"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="img">Imagen principal:</label>
+            <div class="col-sm-10">
+                <img src="/propertiesimg/{{ property._id.toString() }}.png" alt="logo"/>
+                <input type="file" class="custom-file-input" name="img"
+                       accept=".png"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-primary">Modificar</button>
+            </div>
+        </div>
+    </form>
+</div>
 {% endblock %}
