--- a/views/property_myproperties.html
+++ b/views/property_myproperties.html
@@ -1,42 +1,47 @@
 {% extends "base.html" %} {% block titulo %} Mis publicaciones {% endblock %}
 
 {% block contenido_principal %}
-<h2>Mis publicaciones</h2>
 
-<div class="row text-right">
-    <a href="/properties/add" class="btn btn-info" role="button">Agregar propiedad</a>
-</div>
+<div class="container">
+    <h2>Mis publicaciones</h2>
 
-<div class="table-responsive">
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <th>Nombre</th>
-            <th>Tipo</th>
-            <th>Precio</th>
-            <th class="col-md-1"></th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for property in properties %}
-        <tr>
-            <td>{{ property.name }}</td>
-            <td>{{ property.type }}</td>
-            <td>{{ property.price }}</td>
-            <td>
-                <a class="btn btn-warning float-right" href="/property/edit/{{ property._id.toString() }}">Modificar</a>
-            </td>
-            <td>
-                <a class="btn btn-danger float-right" href="/property/delete/{{ property._id.toString() }}">Eliminar</a> <br>
-            </td>
-        </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-</div>
+    <div class="row text-right">
+        <a href="/properties/add" class="btn btn-info" role="button">Agregar propiedad</a>
+    </div>
 
-<div class="row text-right">
-    <a href="/property/add" class="btn btn-info" role="button">Agregar propiedad</a>
+    <div class="table-responsive">
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Tipo</th>
+                <th>Precio</th>
+                <th class="col-md-1"></th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for property in properties %}
+            <tr>
+                <td>{{ property.name }}</td>
+                <td>{{ property.type }}</td>
+                <td>{{ property.price }}</td>
+                <td>
+                    <a class="btn btn-warning float-right"
+                       href="/property/edit/{{ property._id.toString() }}">Modificar</a>
+                </td>
+                <td>
+                    <a class="btn btn-danger float-right"
+                       href="/property/delete/{{ property._id.toString() }}">Eliminar</a> <br>
+                </td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
+    <div class="row text-right">
+        <a href="/property/add" class="btn btn-info" role="button">Agregar propiedad</a>
+    </div>
 </div>
 
 {% endblock %}
