--- a/views/user_modify.html
+++ b/views/user_modify.html
@@ -3,52 +3,55 @@
 {% block titulo %} Modificar Contraseña{% endblock %}
 
 {% block contenido_principal %}
-<h2 class="sectionHeader">Modificar Contraseña</h2>
-<form class="form-horizontal" method="post" action="/user/edit" encType="multipart/form-data">
-    <div class="form-group">
-        <label class="control-label col-sm-2" for="name">Nombre:</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" name="name" placeholder="Nombre del Usuario" rs
-                   value="{{ user.name }}"/>
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-sm-2" for="surname">Apellidos:</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" name="surname" placeholder="Apellidos del Usuario"
-                   value="{{ user.surname }}"/>
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-sm-2" for="password">Nueva Contraseña:</label>
-        <div class="col-sm-10">
-            <input id="password" type="password" class="form-control" name="password"/>
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-sm-2" for="passwordR">Repetir Contraseña:</label>
-        <div class="col-sm-10">
-            <input id="passwordR" type="password" class="form-control" name="passwordR"/>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-dark">Modificar Perfil</button>
-        </div>
-    </div>
-    <p id="message"></p>
-</form>
 
-<script type="text/javascript">
-    $(function () {
-        $('#passwordR').keyup(function () {
-            if ($('#password').val() != $('#passwordR').val()) {
-                $('#message').html('Las contraseñas no coinciden').css('color', 'red');
-            } else {
-                $('#message').html('Las contraseñas coinciden!').css('color', 'green');
-            }
+<div class="container">
+    <h2 class="sectionHeader">Modificar Contraseña</h2>
+    <form class="form-horizontal" method="post" action="/user/edit" encType="multipart/form-data">
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="name">Nombre:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" name="name" placeholder="Nombre del Usuario" rs
+                       value="{{ user.name }}"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="surname">Apellidos:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" name="surname" placeholder="Apellidos del Usuario"
+                       value="{{ user.surname }}"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="password">Nueva Contraseña:</label>
+            <div class="col-sm-10">
+                <input id="password" type="password" class="form-control" name="password"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="passwordR">Repetir Contraseña:</label>
+            <div class="col-sm-10">
+                <input id="passwordR" type="password" class="form-control" name="passwordR"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-dark">Modificar Perfil</button>
+            </div>
+        </div>
+        <p id="message"></p>
+    </form>
+
+    <script type="text/javascript">
+        $(function () {
+            $('#passwordR').keyup(function () {
+                if ($('#password').val() != $('#passwordR').val()) {
+                    $('#message').html('Las contraseñas no coinciden').css('color', 'red');
+                } else {
+                    $('#message').html('Las contraseñas coinciden!').css('color', 'green');
+                }
+            });
         });
-    });
-</script>
+    </script>
+</div>
 
 {% endblock %}
