--- a/views/user_passwordRecover.html
+++ b/views/user_passwordRecover.html
@@ -3,25 +3,27 @@
 {% block titulo %} Recuperar Contraseña{% endblock %}
 
 {% block contenido_principal %}
-<h2 class="sectionHeader">Recuperar Contraseña</h2>
-<form class="form-horizontal" method="post" action="/recover/{{passwordRecover}}" encType="multipart/form-data">
-    <div class="form-group">
-        <label class="control-label col-sm-2" for="password">Nueva Contraseña:</label>
-        <div class="col-sm-10">
-            <input id="password" type="password" class="form-control" name="password"/>
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-sm-2" for="passwordR">Repetir Contraseña:</label>
-        <div class="col-sm-10">
-            <input id="passwordR" type="password" class="form-control" name="passwordR"/>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-dark">Modificar Contraseña</button>
-        </div>
-    </div>
-</form>
 
+<div class="container">
+    <h2 class="sectionHeader">Recuperar Contraseña</h2>
+    <form class="form-horizontal" method="post" action="/recover/{{passwordRecover}}" encType="multipart/form-data">
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="password">Nueva Contraseña:</label>
+            <div class="col-sm-10">
+                <input id="password" type="password" class="form-control" name="password"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="passwordR">Repetir Contraseña:</label>
+            <div class="col-sm-10">
+                <input id="passwordR" type="password" class="form-control" name="passwordR"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-dark">Modificar Contraseña</button>
+            </div>
+        </div>
+    </form>
+</div>
 {% endblock %}
