--- a/views/user_signin.html
+++ b/views/user_signin.html
@@ -1,50 +1,54 @@
-{% extends "base.html" %} 
+{% extends "base.html" %}
 
-{% block titulo %} Registrar usuario {% endblock %} 
+{% block titulo %} Registrar usuario {% endblock %}
 
 {% block contenido_principal %}
-  <h2 class="sectionHeader">Registrar usuario</h2>
-  <form class="form-horizontal" method="post" action="/user" >
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="permission">Tipo:</label>
-      <div class="col-sm-10">
-        <select class="form-control" name="permission" required="true">
-          <option value="U">Usuario
-          </option>
-          <option value="A">Admin
-          </option>
-        </select></div>
-    </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="name">Nombre:</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" name="name" placeholder="Nombre del Usuario" required="true"/>
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="surname">Apellidos:</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" name="surname" placeholder="Apellidos del Usuario" required="true"/>
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Email:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" name="email"
-            placeholder="email@email.com" required="true" />
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="password">Password:</label>
-      <div class="col-sm-10">          
-        <input id="password" type="password"  class="form-control" name="password"
-        	placeholder="contraseña" required="true" />
-      </div>
-    </div>
-    <div class="form-group">        
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-primary">Registrarme</button>
-      </div>
-    </div>
-  </form>
+
+<div class="container">
+    <h2 class="sectionHeader">Registrar usuario</h2>
+    <form class="form-horizontal" method="post" action="/user">
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="permission">Tipo:</label>
+            <div class="col-sm-10">
+                <select class="form-control" name="permission" required="true">
+                    <option value="U">Usuario
+                    </option>
+                    <option value="A">Admin
+                    </option>
+                </select></div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="name">Nombre:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" name="name" placeholder="Nombre del Usuario" required="true"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="surname">Apellidos:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" name="surname" placeholder="Apellidos del Usuario"
+                       required="true"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="email">Email:</label>
+            <div class="col-sm-10">
+                <input type="email" class="form-control" name="email"
+                       placeholder="email@email.com" required="true"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="password">Password:</label>
+            <div class="col-sm-10">
+                <input id="password" type="password" class="form-control" name="password"
+                       placeholder="contraseña" required="true"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-primary">Registrarme</button>
+            </div>
+        </div>
+    </form>
+</div>
 {% endblock %}
